ecmascript/parser/tests/test262-error-references/fail/77fe5a8d6ae33dd1.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/77fe5a8d6ae33dd1.js:1:20
  |
1 | function t() { ;  ;  
  |                    ^

